--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-typescript": "^1.1.0",
     "express": "^4.16.3",
+    "fork-ts-checker-webpack-plugin": "^0.4.3",
     "isomorphic-unfetch": "^2.1.0",
     "next": "^6.1.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-markdown": "^3.3.4"
+    "react-markdown": "^3.3.4",
+    "typescript": "^2.9.2"
   }
 }
