--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "react-dom": "^16.4.1",
     "react-markdown": "^3.3.4",
     "typescript": "^2.9.2"
+  },
+  "devDependencies": {
+    "tsconfig-paths-webpack-plugin": "^3.2.0"
   }
 }
