--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
       "lib": [
         "dom",
         "es2016"
-      ]
+      ],
+      "paths": {
+          "@components/*": [ "./components/*"]
+      }
     }
   }
