Got initial pull of movie without subsequent calls

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
         "es2016"
       ],
       "paths": {
-          "@components/*": [ "./components/*"]
+          "@components/*": [ "./components/*"],
+          "@core/*": [ "./core/*"]
       }
     }
   }
