--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/next": "^6.0.4",
+    "@types/react": "^16.4.6",
+    "@types/react-dom": "^16.0.6",
     "@zeit/next-typescript": "^1.1.0",
     "express": "^4.16.3",
     "fork-ts-checker-webpack-plugin": "^0.4.3",
