--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/next": "^6.0.4",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
+    "@types/styled-jsx": "^2.2.3",
     "@zeit/next-typescript": "^1.1.0",
     "express": "^4.16.3",
     "fork-ts-checker-webpack-plugin": "^0.4.3",
