--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fork-ts-checker-webpack-plugin": "^0.4.3",
     "isomorphic-unfetch": "^2.1.0",
     "next": "^6.1.1",
+    "next-routes": "^1.4.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-markdown": "^3.3.4",
