--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "^7.1.5",
     "express": "^4.16.3",
     "isomorphic-unfetch": "^2.1.0",
+    "js-cookie": "^2.2.0",
     "next": "^6.1.1",
     "next-routes": "^1.4.2",
     "react": "^16.4.1",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/next": "^6.0.4",
+    "@types/js-cookie": "^2.1.0",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
     "@types/styled-jsx": "^2.2.3",
